--- a/website/public/index.html
+++ b/website/public/index.html
@@ -29,8 +29,8 @@
     -->
   <title></title>
   <style>
-    body {
-      background-color: #ffffff;
+        body {
+      background-color: #010119;
     }
     .base-loading__container {
       padding-top: calc((100vh / 2) - 90px);
@@ -52,7 +52,7 @@
       position: absolute;
       left: 8px;
       width: 16px;
-      background: #1178FF;
+      background:#5865F2;
       animation: base-loading 1.2s cubic-bezier(0, 0.5, 0.5, 1) infinite;
     }
 
