--- a/website/public/index.html
+++ b/website/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="keywords" content="" />
-  <meta name="description" content="" />
+  <meta name="description" content="Netuno Platform - Open Source and Low-Code" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&family=Poppins&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title></title>
+  <title>Netuno Platform</title>
   <style>
         body {
       background-color: #010119;
