--- a/website/public/index.html
+++ b/website/public/index.html
@@ -22,15 +22,15 @@
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
-
+010119
       Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>Netuno Platform</title>
   <style>
-        body {
-      background-color: #010119;
+    body {
+      background-color: #010119 !important;
     }
     .base-loading__container {
       padding-top: calc((100vh / 2) - 90px);
